fea: create crud and view for Transacao and PlanoConta + db connection

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
-﻿@{ViewData["Title"] = "Home Page";}
+﻿@{
+    ViewData["Title"] = "Home Page";
+}
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">MyFinance</h1>
+    <h2>O seu app de controle financeiro</h2>
+    <p>Gerencie suas finanças com facilidade e eficiência. Nosso aplicativo oferece recursos para controlar despesas e conectá-las a planos de conta. Simplifique sua vida financeira com MyFinance</p>
 </div>
